Fixed vertical scroll on body of page template by adding a height css property and a overflowscroll property

--- a/src/app/client/components/PageTemplate/styles.module.css
+++ b/src/app/client/components/PageTemplate/styles.module.css
@@ -2,6 +2,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .content {
@@ -17,8 +18,11 @@
 }
 
 .body {
+    height: calc(100vh - var(--navHeight));
     flex: 1;
     position: relative;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 @media screen and (min-width: 950px) {
